[package]
name = "tokio-diesel"
version = "0.3.0"
authors = ["Ryan Leckey <leckey.ryan@gmail.com>"]
edition = "2018"
description = "Integrate Diesel into Tokio cleanly and efficiently."
repository = "https://github.com/mehcode/tokio-diesel"
license = "MIT/Apache-2.0"
categories = ["asynchronous", "database"]

[dependencies]
async-trait = "0.1.42"
diesel = { version = "2.0.2", default-features = false, features = ["r2d2"] }
futures = { version = "0.3.8", default-features = false }
r2d2 = "0.8.8"
tokio = { version = "1", default-features = false, features = ["rt-multi-thread"] }

[dev-dependencies]
diesel = { version = "2.0.2", default-features = false, features = ["postgres","uuid"] }
uuid = { version = "1.2.1", features = ["v4"] }
tokio = { version = "1", default-features = false, features = ["full"] }
