[package]
name = "tokio-diesel"
version = "0.3.0"
authors = ["Ryan Leckey <leckey.ryan@gmail.com>"]
edition = "2021"
description = "Integrate Diesel into Tokio cleanly and efficiently."
repository = "https://github.com/mehcode/tokio-diesel"
license = "MIT/Apache-2.0"
categories = ["asynchronous", "database"]

[dependencies]
async-trait = "0.1.42"
diesel = { version = "2.1.4", default-features = false, features = ["r2d2"] }
futures = { version = "0.3.30", default-features = false }
r2d2 = "0.8.10"
tokio = { version = "1", default-features = false, features = ["rt-multi-thread"] }

[dev-dependencies]
diesel = { version = "2.1.4", default-features = false, features = ["postgres","uuid","r2d2"] }
uuid = { version = "1.7.0", features = ["v4"] }
tokio = { version = "1", default-features = false, features = ["full"] }
